tests/should_fail/let_destructure_struct_field_count.nv
// should_fail: let destructure struct with wrong field count
module let_destructure_struct_field_count
struct Point { x: Int, y: Int }
let p = Point(1, 2)
let Point { x } = p
